--- a/index.html
+++ b/index.html
@@ -61,12 +61,38 @@
         </table>
         <hr>
     </section>
-   <section>
-
-   </section>
-   <section>
-    
-   </section>
+    <section>
+    <h3>Cose da fare</h3>
+    <ul>
+        <li>Visitare la Tower of London &Chi;</li>
+        <li>Visitare Greenwich &radic;</li>
+        <li>Ascoltare un artista di strada a Covent Garden &radic;</li>
+        <li>Mangiare il tipico Fish and Chips Inglese &Chi;</li>
+    </ul>
+    <hr>
+    </section>
+    <section>
+       <h3>Info utili:</h3>
+       <ol>
+        <li>Numeri utili di emergenza</li>
+        <ul>
+            <li><strong>999</strong> - Emergenza</li>
+            <li><strong>101</strong> - Numero polizia</li>
+            <li><strong>111</strong> - Numero assistenza medica</li>
+        </ul>
+        <li>Hotel</li>
+        <ul>
+            <li><strong>Nome Hotel</strong>: Buckingham Palace</li>
+            <li><strong>Indirizzo Hotel</strong>: Westmister, London SW1A 1AA, Regno Unito</li>
+        </ul>
+        <li>Aereo</li>
+        <ul>
+            <li><strong>Volo di Andata</strong>: Y1234X, ore 9:30 da Milano Malpensa</li>
+            <li><strong>Volo di ritorno</strong>: Y1236X, ore 18:30 da London Heathrow</li>
+        </ul>
+       </ol>
+       <hr>
+    </section>
 </main>
 <footer>
 
